--- a/index.html
+++ b/index.html
@@ -33,22 +33,65 @@
 
 <div id="box1">
 <h3 id="Equiptment">Equiptment</h3>
-<p> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+</br>
+<p> <ol>
+  <ul>We have lots of Equiptment
+		<ol>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+		</ol>
+	</ul>
+</ol>
+</p>
 </div>
 
 <div id="box2">
 <h4 id="Accessories"> Accessories</h4>
-<p> Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-</div>
 
+</br>
+<p> <ol>
+  <ul>We have lots of Accessories
+		<ol>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+		</ol>
+	</ul>
+</ol>
+</p>
+</div>
 <div id="box3">
 <h5 id="Supplies">Supplies</h5>
-<p> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+</br>
+<p> <ol>
+  <ul>We have lots of Supplies
+		<ol>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+		</ol>
+	</ul>
+</ol>
+</p>
 </div>
 
 <div id="box4">
 <h6 id="Parts"> Parts</h6>
-<p> Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.</p>
+<p> <ol>
+  <ul>We have lots of Parts
+		<ol>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+			<li>Item</li>
+		</ol>
+	</ul>
+</ol>
+</p>
 </div>
 
 <div id="Menu1">
