--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
                 <div id="leftpic">
                   <div id="bigBox">
-                  <img src="http://www.pnwx.com/X-RayRollUp2.gif" alt="xray">
+                  <img src="http://www.pnwx.com/X-RayRollUp2.gif" alt="xray"/>
                   </div>
                 </div>
 <div id="rightdesc">
@@ -95,7 +95,7 @@
 </div>
 
 <div id="Menu1">
-  <h7 id=menu> Menu Bar</h7>
+  <h7 id="menu"> Menu Bar</h7>
 </div>
 
 <div id="Contact">
