--- a/index.html
+++ b/index.html
@@ -34,64 +34,23 @@
 <div id="box1">
 <h3 id="Equiptment">Equiptment</h3>
 <br />
-<p> <ol>
-  <ul>We have lots of Equiptment
-		<ol>
-			<li>Item</li>
-			<li>Item</li>
-			<li>Item</li>
-			<li>Item</li>
-		</ol>
-	</ul>
-</ol>
-</p>
+<p> We have alot of Equiptment. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s </p>
 </div>
 
 <div id="box2">
 <h4 id="Accessories"> Accessories</h4>
  <br />
-<p>
-<ol>
-  <ul>We have lots of Accessories
-		<ol>
-			<li>Item</li>
-			<li>Item</li>
-			<li>Item</li>
-			<li>Item</li>
-		</ol>
-	</ul>
-</ol>
-</p>
+<p>We have alot of Accessories. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 </div>
 <div id="box3">
 <h5 id="Supplies">Supplies</h5>
 <br />
-<p> <ol>
-  <ul>We have lots of Supplies
-		<ol>
-			<li>Item</li>
-			<li>Item</li>
-			<li>Item</li>
-			<li>Item</li>
-		</ol>
-	</ul>
-</ol>
-</p>
+<p> We have alot of Supplies. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 </div>
 
 <div id="box4">
 <h6 id="Parts"> Parts</h6>
-<p> <ol>
-  <ul>We have lots of Parts
-		<ol>
-			<li>Item</li>
-			<li>Item</li>
-			<li>Item</li>
-			<li>Item</li>
-		</ol>
-	</ul>
-</ol>
-</p>
+<p> We have lots of Parts. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 </div>
 
 <div id="Menu1">
